# gc_function-hello

./: README.md  pyproject.toml
.github/: gc-function_deploy.yaml
.github/workflows/: gc-function_deploy.yaml
